--- a/Css/style.css
+++ b/Css/style.css
@@ -141,6 +141,11 @@ font-weight: bold;
     padding-bottom: 70px;
 }
 
+.filter-button-group button {
+    font-size: 14px !important;
+}
+
+
 
 .btns-quantity button {
 border: 1px solid #eee;
